feat(fs-new) completing sharepoint adapter and making download work for unified fs API (#232)
* completing sharepoint adapter and making download work for unified fs API

	modified:   apps/web/app/api/debug/route.ts
	modified:   connectors/connector-google/server.ts
	modified:   kits/sdk/openapi.json
	modified:   kits/sdk/openapi.types.d.ts
	modified:   packages/api/createRouterHandler.ts
	modified:   packages/api/package.json
	modified:   packages/api/proxyHandler.ts
	modified:   packages/engine-backend/context.ts
	modified:   packages/trpc/package.json
	modified:   pnpm-lock.yaml
	modified:   unified/unified-file-storage/adapters/index.ts
	modified:   unified/unified-file-storage/adapters/sharepoint-adapter/index.ts
	modified:   unified/unified-file-storage/adapters/sharepoint-adapter/mappers.ts
	new file:   unified/unified-file-storage/generate.cjs
	modified:   unified/unified-file-storage/package.json
	modified:   unified/unified-file-storage/router.spec.ts
	modified:   unified/unified-file-storage/router.ts
	modified:   unified/unified-file-storage/unifiedModels.ts

* adding back debug

* typecheck
